Full screen fixed: Works on mobile safari

--- a/css/jquery.imageplayer.css
+++ b/css/jquery.imageplayer.css
@@ -103,3 +103,7 @@ img_player .stage img {
     padding: 13px 20px 0 0;
     float: right;
 }
+
+.invisibleimageplayer {
+    display: none;
+}
